# PLAY-ON

./: .env  .env.example  .gitignore  README.md  package-lock.json  package.json
public/anime-extensions/: animepahe.js  gogoanime.js  hianime.js  index.json
public/extensions/: index.json  mangareader.js  weebcentral.js
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anilist.rs  downloader.rs  file_system.rs  lib.rs  mac_name.rs  main.rs  media_player.rs  myanimelist.rs  title_parser.rs  win_name.rs
src/api/: anilistClient.ts  malClient.ts
src/components/: ErrorBoundary.tsx  GridMotion.tsx  Layout.tsx  Titlebar.tsx
src/context/: AuthContext.tsx  DynamicThemeContext.tsx  LocalMediaContext.tsx  MalAuthContext.tsx  NotificationContext.tsx  NowPlayingContext.tsx  SearchBarContext.tsx  SelectionContext.tsx  SettingsContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/extensions/: animepahe.ts  gogoanime.ts  hianime.ts  vidsrc.ts  weebcentral.ts
src/hooks/: useAniListNotifications.ts  useAnimeData.ts  useAuth.ts  useDiscordRPC.ts  useDismissedRecommendations.ts  useFavoriteAnime.ts  useFolderMappings.ts  useHistory.ts  useImageColor.ts  useKeyboardShortcuts.ts  useLazyImage.tsx  useMousePosition.ts  useNetworkStatus.ts  usePersistedFilters.ts  useRecentSearches.ts  useSearchHistory.ts  useTrackingSync.ts  useViewTransition.ts
src/layouts/: MainLayout.tsx
src/lib/: cacheUtils.ts  localAnimeDb.ts  localMangaDb.ts  syncService.ts  (+1 more)
(+122 files in other folders)
