[package]
name = "play-on"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "play_on_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-deep-link = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2"
base64 = "0.22.1"
lofty = "0.22.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
regex = "1.12.2"
tauri-plugin-process = "2"
tauri-plugin-drpc = "0.1.6"
lazy_static = "1.4"
tauri-plugin-notification = "2.3.3"
zip = "0.6"
natord = "1.0"
urlencoding = "2.1.3"
tauri-plugin-fs = "2.4.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
